# datahandler

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tree.txt
.github/workflows/: publish.yml
src/mydatahandler/: simple_api.py  test_api.py
src/mydatahandler/handler/: singleday_data_handler.py  stock_data_handler.py
src/mydatahandler/handler/functions/: __init__.py  calculate_limit.py  crawler_krx.py  get_recent_df.py  remove_unnecessary.py  update_upsert_df.py
src/mydatahandler/utility/crawler/: naver.py  nxt.py
src/mydatahandler/utility/db/: sql.py
