[project]
name = "apsniper0673_datahandler"
version = "0.1.12"
description = "My stock data handler for APSniper0673"
authors = [
  { name = "apsniper0673" }
]
requires-python = ">=3.8"
dependencies = [
    # "pandas",
    # "numpy",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]